--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^0.1.3
   firebase_auth: ^0.16.0
   google_sign_in: ^4.4.2
+  flutter_facebook_login: ^3.0.0
 
 dev_dependencies:
   flutter_test:
