--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   firebase_auth: ^0.16.0
   google_sign_in: ^4.4.2
   flutter_facebook_login: ^3.0.0
+  provider: ^4.0.5
 
 dev_dependencies:
   flutter_test:
