--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   google_sign_in: ^4.4.2
   flutter_facebook_login: ^3.0.0
   provider: ^4.0.5
+  cloud_firestore: ^0.13.5
 
 dev_dependencies:
   flutter_test:
