--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flutter_facebook_login: ^3.0.0
   provider: ^4.0.5
   cloud_firestore: ^0.13.5
+  adobe_xd: ^0.1.1
 
 dev_dependencies:
   flutter_test:
