--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   provider: ^4.0.5
   cloud_firestore: ^0.13.5
   adobe_xd: ^0.1.1
+  intl: ^0.16.1
 
 dev_dependencies:
   flutter_test:
