--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   cloud_firestore: ^0.13.5
   adobe_xd: ^0.1.1
   intl: ^0.16.1
+  rxdart: ^0.24.1
 
 dev_dependencies:
   flutter_test:
